add notfound, comingsoon

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -9,4 +9,5 @@
 @import "setting/menu";
 @import "setting/layout";
 @import "setting/uuid";
-@import "setting/_cidr";
+@import "setting/cidr";
+@import "setting/comingsoon";
